Update research description

--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
           </div>
           <div class="media-content px-3 align-self-center mbr-white py-2">
               <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">
-                Brett Daley</p>
+                Brett Daley
+              </p>
               <p class="mbr-author-desc mbr-fonts-style display-7">
-                <img src="assets/images/LinkedIn-34px.png" alt="LinkedIn" align="left" height=18 width=18><a href="https://www.linkedin.com/in/brettdaley">&nbsp;LinkedIn</a>
-                <br>
-                <img src="assets/images/GitHub-32px.png" alt="GitHub" align="left" height=18 width=18><a href="https://github.com/brett-daley">&nbsp;GitHub</a></p>
-                <p class="mbr-text testimonial-text mbr-fonts-style display-7">
-                  I am an aspiring computer scientist with ambitions to develop a general problem-solving algorithm and find useful applications for it.
-                  My primary research interest is <strong>deep reinforcement learning</strong>.</p>
+              <img src="assets/images/LinkedIn-34px.png" alt="LinkedIn" align="left" height=18 width=18><a href="https://www.linkedin.com/in/brettdaley">&nbsp;LinkedIn</a>
+              <br>
+              <img src="assets/images/GitHub-32px.png" alt="GitHub" align="left" height=18 width=18><a href="https://github.com/brett-daley">&nbsp;GitHub</a></p>
+              <p class="mbr-text testimonial-text mbr-fonts-style display-7">
+                I am a computer science PhD student at Northeastern University pursuing the development of general problem-solving agents.
+                My primary research interest is <strong>reinforcement learning</strong>.
+              </p>
           </div>
         </div>
     </div>
@@ -49,9 +51,12 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-              <p>I received my B.S. in Electrical and Computer Engineering from Northeastern University in 2018. I completed four co-ops alongside my studies: software automation at <a href="https://www.spacex.com">SpaceX</a>, firmware development at <a href="https://www.tesla.com">Tesla</a>, printed circuit board design at <a href="https://flex.com">Flextronics</a>, and microprocessor design at <a href="https://www.amd.com">AMD</a>. I also conducted research with <a href="http://www.ccs.neu.edu/home/camato/">Chris Amato</a> in the <a href="https://llpr.ccs.neu.edu/">Lab for Learning and Planning in Robotics</a> and with <a href="http://www.ece.neu.edu/fac-ece/kaeli.html">David Kaeli</a> in the <a href="http://www.ece.neu.edu/groups/nucar/">Computer Architecture Research Group</a>.</p>
+              <p>
+                My research focuses on efficient reward-based learning as a means for (approximately) optimal control.
+                I am particularly interested in addressing high-dimensional environments where classical methods like dynamic programming become infeasible.
+                As a result, my algorithms have frequently incorporated deep neural networks.
+              </p>
               <p><a href="https://scholar.google.com/citations?user=PP2_bZ8AAAAJ&sortby=pubdate"><strong>PUBLICATIONS</strong></a></p>
-              <p></p>
             </div>
         </div>
     </div>
