--- a/index.html
+++ b/index.html
@@ -26,17 +26,23 @@
   <section class="testimonials3 cid-rdM5OZecPG" id="testimonials3-6">
     <div class="container">
         <div class="media-container-row">
-          <div class="mbr-figure pl-lg-5" style="width: 100%;">
-            <img src="assets/images/portrait-1162x1162.jpg" alt="Brett Daley">
+          <div class="mbr-figure pl-lg-5" style="padding-top: 5%; padding-bottom: 5%;">
+            <img src="assets/images/portrait-1162x1162.jpg" alt="Brett Daley"
+              style="height: 50%; width: 50%; border-radius: 50%; margin: auto;">
           </div>
           <div class="media-content px-3 align-self-center mbr-white py-2">
-              <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">
+              <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7" style="font-size: 200%;">
                 Brett Daley
               </p>
-              <p class="mbr-author-desc mbr-fonts-style display-7">
-              <img src="assets/images/LinkedIn-34px.png" alt="LinkedIn" align="left" height=18 width=18><a href="https://www.linkedin.com/in/brettdaley">&nbsp;LinkedIn</a>
+              <div>
+                <img src="assets/images/LinkedIn-34px.png" alt="LinkedIn" height=18 width=18>
+                <a href="https://www.linkedin.com/in/brettdaley" style="font-size: 120%; vertical-align: middle;">&nbsp;LinkedIn</a>
+              </div>
+              <div>
+                <img src="assets/images/GitHub-32px.png" alt="GitHub" height=18 width=18>
+                <a href="https://github.com/brett-daley" style="font-size: 120%; vertical-align: middle;">&nbsp;GitHub</a>
+              </div>
               <br>
-              <img src="assets/images/GitHub-32px.png" alt="GitHub" align="left" height=18 width=18><a href="https://github.com/brett-daley">&nbsp;GitHub</a></p>
               <p class="mbr-text testimonial-text mbr-fonts-style display-7">
                 I am a computer science PhD student at Northeastern University pursuing the development of general problem-solving agents.
                 My primary research interest is <strong>reinforcement learning</strong>.
