Change portrait photo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <meta name="google-site-verification" content="n4HpI9X2QTSDKwOcHJ56eE_7A-NbSan6wL43Azj1hdM">
   <link rel="shortcut icon" href="assets/images/logo4.png" type="image/x-icon">
-  <link rel="image_src" href="assets/images/portrait-1162x1162.jpg">
   <title>Brett Daley's Homepage</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -26,8 +25,8 @@
 <section class="testimonials3 cid-rdM5OZecPG" id="testimonials3-6">
   <div class="container">
     <div class="media-container-row">
-      <div class="mbr-figure pl-lg-5" style="padding-top: 5%; padding-bottom: 5%;">
-        <img src="assets/images/portrait-1162x1162.jpg" alt="Brett Daley"
+      <div class="mbr-figure pl-lg-5" style="width: 100%; padding-top: 5%; padding-bottom: 5%;">
+        <img src="assets/images/brett-daley-portrait-1000px.jpg" alt="Brett Daley"
           style="height: 50%; width: 50%; border-radius: 50%; margin: auto;">
       </div>
       <div class="media-content px-3 align-self-center mbr-white py-2">
