New site is ready

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p>
           My research focuses on efficient reward-based learning as a means for (approximately) optimal control.
           I am particularly interested in addressing high-dimensional environments where classical methods like dynamic programming become infeasible.
-          As a result, my algorithms have frequently incorporated deep neural networks.
+          To this end, my algorithms often utilize deep neural networks to process rich sensory data.
         </p>
         <p><a href="https://scholar.google.com/citations?user=PP2_bZ8AAAAJ&sortby=pubdate"><strong>PUBLICATIONS</strong></a></p>
       </div>
