--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
         <br>
         <p class="mbr-text testimonial-text mbr-fonts-style display-7">
-          I am a computer science PhD student at Northeastern University pursuing the development of general problem-solving agents.
-          My primary research interest is <strong>reinforcement learning</strong>.
+          I am a computer science PhD student at the University of Alberta pursuing the development of general problem-solving agents.
+          My primary interest is <strong>reinforcement learning</strong>.
         </p>
       </div>
     </div>
